<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".fragments.settings.AboutAppFragment">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/headerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/arrowBack"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="start|center_vertical"
                android:rotation="180"
                android:src="@drawable/ic_arrow_right" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginEnd="25dp"
                android:text="О приложении"
                android:textSize="32sp" />

        </LinearLayout>

        <ImageView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/appNameView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/philosopher"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/versionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:text="Версия 1.0.0"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/descriptionTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="О приложении"
            android:layout_marginTop="10dp"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:padding="15dp"
            android:id="@+id/descriptionTextView"
            android:layout_width="match_parent"
            android:layout_margin="15dp"
            android:layout_height="wrap_content"

            android:text="@string/app_description"
            android:textSize="20sp"
            android:layout_marginBottom="16dp"
            />

        <TextView
            android:id="@+id/featuresTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Основные функции"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"
            android:layout_gravity="center"/>

        <TextView
            android:padding="25dp"
            android:id="@+id/featuresTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_features"
            android:textSize="20sp"
            android:layout_marginBottom="16dp"
            />





        <TextView
            android:id="@+id/contactTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_contact"
            android:textSize="20sp"
            android:padding="25dp"
            android:layout_marginBottom="16dp"
            />

        <TextView
            android:id="@+id/contactUsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Наши контакты"
            android:textStyle="bold"
            android:textSize="25sp" />

        <LinearLayout
            android:id="@+id/musicianContactsValueLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/contactPhoneLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_phone" />

                <TextView
                    android:id="@+id/musicianPhoneNumberText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="+71234567890"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/contactEmailLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"

                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_email" />

                <TextView

                    android:id="@+id/musicianEmailText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="findyourband@email.ru"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/contactSocialMediaLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"

                android:orientation="horizontal">

                <ImageView

                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_socialmedia" />

                <TextView
                    android:id="@+id/musicianSocialMediaText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="findyourband"
                    android:textSize="20sp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</ScrollView>